--- a/order.html
+++ b/order.html
@@ -149,6 +149,23 @@
                         </td>
                     </tr>
                 </table>
+                <div class="primary-text" style="width: 50%; align-self: end; margin-right: 100px; padding-top: 30px; padding-bottom: 30px; border-top: 1px dashed #B0AF83; border-bottom: 1px dashed #B0AF83;">
+                    <div style="display: flex; justify-content: space-between;">
+                        <span>Subtotal:</span>
+                        <span>₹ 15,500</span>
+                    </div>
+                    <div style="display: flex; justify-content: space-between; padding-top: 10px;">
+                        <span>Shipping and handling:</span>
+                        <span>₹ 150</span>
+                    </div>
+                </div>
+                <div class="primary-text" style="width: 50%; align-self: end; margin-right: 100px; padding-top: 10px; padding-bottom: 10px; border-bottom: 1px dashed #B0AF83;">
+                    <div style="display: flex; justify-content: space-between;">
+                        <span>Amount Paid:</span>
+                        <span>₹ 15,650</span>
+                    </div>
+                </div>
+                <button class="primary-text" style="background-color: #B0AF83; color: #fff; border: none; padding: 15px 30px; border-radius: 10px; font-size: 14px; margin-top: 80px; margin-bottom: 100px;">Continue Shopping</button>
             </div>
         </div>
     </body>
